--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,68 +3,67 @@ version: 2.1
 references:
   - &CERT_KEY certs-cache-{{ checksum "certs_cache_key" }}-v3
 
-# this allows you to use CircleCI's dynamic configuration feature
+# Enable dynamic configuration
 setup: true
 
-filters: &all_tags
-  tags:
-    only: /^\d+\.\d+\.\d+([a-z0-9\-\+])*/
-
-# the continuation orb is required in order to use dynamic configuration
 orbs:
   continuation: circleci/continuation@0.2.0
 
-# our defined job, and its steps
 jobs:
   setup:
     machine: true
-    resource_class: class/custom  # Specify the self-hosted runner's resource class here
+    resource_class: name/spaces  # Use self-hosted runner
     steps:
-      - checkout # checkout code
-      - maybe_build_certs
-      - run: # run a command
+      - checkout  # Checkout code
+      - run:  # Generate config
           name: Generate config
           command: |
-            tools/circle-generate-config.sh generated_config.yml
-      - continuation/continue:
-          configuration_path: /var/lib/circleci-runner/workdir/generated_config.yml # use newly generated config to continue
+            tools/circle-generate-config.sh /var/lib/circleci-runner/workdir/generated_config.yml
+      - continuation/continue:  # Continue with generated config
+          configuration_path: /var/lib/circleci-runner/workdir/generated_config.yml
 
-commands:
-  maybe_build_certs:
+  build_and_test:
     machine: true
-    resource_class: class/custom
+    resource_class: name/spaces  # Use the self-hosted runner
     steps:
-      - run:
+      - checkout  # Checkout code
+      - run:  # Prepare cache key
           name: Prepare cache key
           command: tools/make-certs-cache-key.sh > certs_cache_key && cat certs_cache_key
-      - restore_cache:
+      - restore_cache:  # Restore certificates from cache
           name: Restore certificates
           key: *CERT_KEY
-      - run:
-          # We do not rebuild certificates to ensure that the cached version
-          # is the master-copy
+      - run:  # Build certificates if not cached
           name: Build certificates if not cached
           command: test -f tools/ssl/mongooseim/key.pem || make certs
-      - run:
+      - run:  # Print certificate hashes for debugging
           name: Print cert hashes for debugging
           command: find tools/ssl -type f -exec md5sum {} \; | sort
-      - run:
+      - run:  # Check if certificate exists and continue
           name: Continue if certificate exists
           command: test -f tools/ssl/mongooseim/key.pem
-      - save_cache:
+      - save_cache:  # Cache built certificates
           name: Cache built certs
           key: *CERT_KEY
           paths:
             - ~/project/tools/ssl/ca
             - ~/project/tools/ssl/ca-clients
             - ~/project/tools/ssl/mongooseim
+      - run:  # Your build and test commands
+          name: Build and test
+          command: |
+            # Add your build and test commands here
+            make build  # Example build command
+            make test  # Example test command
+      - run:  # Package or deploy (optional)
+          name: Package or deploy
+          command: |
+            make package  # Example package/deploy command
 
-# our single workflow, that triggers the setup job defined above
 workflows:
-  machine: true
-  resource_class: class/custom
-  setup:
+  setup_workflow:
     jobs:
-      - setup:
-          filters: *all_tags
-#testing1.1
+      - setup  # Run setup on self-hosted runner
+      - build_and_test:  # Run build_and_test on self-hosted runner
+          requires:
+            - setup
