--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,11 @@ version: 2.1
 references:
   - &CERT_KEY certs-cache-{{ checksum "certs_cache_key" }}-v3
 
-# Enable dynamic configuration
 setup: true
+
+filters: &all_tags
+  tags:
+    only: /^\d+\.\d+\.\d+([a-z0-9\-\+])*/
 
 orbs:
   continuation: circleci/continuation@0.2.0
@@ -12,58 +15,45 @@ orbs:
 jobs:
   setup:
     machine: true
-    resource_class: class/custom  # Use self-hosted runner
+    resource_class: class/custom  # Specify the self-hosted runner's resource class here
     steps:
-      - checkout  # Checkout code
-      - run:  # Generate config
+      - checkout
+      - maybe_build_certs
+      - run:
           name: Generate config
           command: |
             tools/circle-generate-config.sh generated_config.yml
-      - continuation/continue:  # Continue with generated config
-          configuration_path: /var/lib/circleci-runner/workdir/generated_config.yml
+      - continuation/continue:
+          configuration_path: /var/lib/circleci-runner/generated_config.yml
 
-  build_and_test:
-    machine: true
-    resource_class: class/custom  # Use the self-hosted runner
+commands:
+  maybe_build_certs:
     steps:
-      - checkout  # Checkout code
-      - run:  # Prepare cache key
+      - run:
           name: Prepare cache key
           command: tools/make-certs-cache-key.sh > certs_cache_key && cat certs_cache_key
-      - restore_cache:  # Restore certificates from cache
+      - restore_cache:
           name: Restore certificates
           key: *CERT_KEY
-      - run:  # Build certificates if not cached
+      - run:
           name: Build certificates if not cached
           command: test -f tools/ssl/mongooseim/key.pem || make certs
-      - run:  # Print certificate hashes for debugging
+      - run:
           name: Print cert hashes for debugging
           command: find tools/ssl -type f -exec md5sum {} \; | sort
-      - run:  # Check if certificate exists and continue
+      - run:
           name: Continue if certificate exists
           command: test -f tools/ssl/mongooseim/key.pem
-      - save_cache:  # Cache built certificates
+      - save_cache:
           name: Cache built certs
           key: *CERT_KEY
           paths:
             - ~/project/tools/ssl/ca
             - ~/project/tools/ssl/ca-clients
             - ~/project/tools/ssl/mongooseim
-      - run:  # Your build and test commands
-          name: Build and test
-          command: |
-            # Add your build and test commands here
-            make build  # Example build command
-            make test  # Example test command
-      - run:  # Package or deploy (optional)
-          name: Package or deploy
-          command: |
-            make package  # Example package/deploy command
 
 workflows:
-  setup_workflow:
+  setup:
     jobs:
-      - setup  # Run setup on self-hosted runner
-      - build_and_test:  # Run build_and_test on self-hosted runner
-          requires:
-            - setup
+      - setup:
+          filters: *all_tags
