--- a/.circleci/template.yml
+++ b/.circleci/template.yml
@@ -281,11 +281,7 @@ commands:
             - ~/project/_build/default/
             - ~/project/big_tests/_build/default/
 
-  prepare_for_cache:
-    steps:
-      - run:
-          name: Prepare for cache
-          command: bash -c 'echo $OTP_VERSION-$ARCH > otp_version'
+  
 
   cache_prod_build:
     parameters:
@@ -313,19 +309,20 @@ commands:
           key: *BUILD_CACHE_KEY
 
   persist_workspace:
-    steps:
-      - run:
-          name: Persist workspace
-          command: |
-            mkdir -p /workspace && cp -R ~/project/* /workspace/
-      - persist_to_workspace:
-          root: /workspace
-          paths:
-            - "*"
+  steps:
+    - run:
+        name: Persist workspace
+        command: |
+          mkdir -p /var/lib/circleci-runner/workdir/workspace && cp -R ~/project/* /var/lib/circleci-runner/workdir/workspace/
+    - persist_to_workspace:
+        root: /var/lib/circleci-runner/workdir/workspace
+        paths:
+          - "*"
 
-  restore_workspace:
-    steps:
-      - attach_workspace: {at: /workspace}
+restore_workspace:
+  steps:
+    - attach_workspace:
+        at: /var/lib/circleci-runner/workdir/workspace
 
   run_coverage_analysis:
     steps:
@@ -337,16 +334,17 @@ commands:
             ./rebar3 codecov analyze
             tools/circle-upload-codecov.sh
 
-  run_small_tests:
-    steps:
-      - run:
-          name: Wait for redis
-          command: |
-            tools/wait-for-it.sh -p 6379
-      - run:
-          name: Run Small Tests
-          command: |
-            tools/test.sh -p small_tests -s true -e true
+ run_small_tests:
+  steps:
+    - run:
+        name: Wait for Redis
+        command: |
+          /var/lib/circleci-runner/workdir/tools/wait-for-it.sh -p 6379
+    - run:
+        name: Run Small Tests
+        command: |
+          /var/lib/circleci-runner/workdir/tools/test.sh -p small_tests -s true -e true
+
 
   run_docker_smoke_test:
     steps:
@@ -1047,4 +1045,3 @@ workflows:
           requires:
             - docker_build_and_ship
           filters: *all_tags 
-
