--- a/.circleci/template.yml
+++ b/.circleci/template.yml
@@ -1,14 +1,12 @@
 version: 2.1
 references:
-  - mongooseim/cimg-erlang:25.3.2.9
-  - mongooseim/cimg-erlang:26.2.2
-  - 
-    - /bin/sh
-    - -c
-    - eval ${INSTALL_DEPS_CMD:-echo} && echo __INJECT_FILES__ | eval ${BASE32DEC:-base32 --decode} | bash
-  - certs-cache-{{ checksum "certs_cache_key" }}-v3
-  - deps-cache-{{ checksum "rebar.lock" }}-{{ checksum "big_tests/rebar.lock" }}-{{ checksum "otp_version" }}-v5
-  - build-cache-{{ .Branch }}-{{ .Revision }}-{{ checksum "otp_version" }}-v6
+  - &OTP25 mongooseim/cimg-erlang:25.3.2.9
+  - &OTP26 mongooseim/cimg-erlang:26.2.2
+  - &ENTRYPOINT ["/bin/sh", "-c", "eval ${INSTALL_DEPS_CMD:-echo} && echo __INJECT_FILES__ | eval ${BASE32DEC:-base32 --decode} | bash"]
+  # Caches created via the save_cache step are stored for up to 15 days
+  - &CERT_KEY certs-cache-{{ checksum "certs_cache_key" }}-v3
+  - &DEPS_CACHE_KEY deps-cache-{{ checksum "rebar.lock" }}-{{ checksum "big_tests/rebar.lock" }}-{{ checksum "otp_version" }}-v5
+  - &BUILD_CACHE_KEY build-cache-{{ .Branch }}-{{ .Revision }}-{{ checksum "otp_version" }}-v6
 
 containers:
   - &mysql_container
